--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@ body{
     
     align-items: center;
 
-    padding: 70vh 30px 30px 30px;
+    padding: 30vh 30px 30px 30px;
     position: absolute;
     background-color: aliceblue;
     width: 50%;
@@ -25,7 +25,7 @@ body{
     margin-top: 10px;
     background-color: rgb(76, 76, 175);
     color: #fff;
-    font-size: 23px;
+    font-size: 0.46em;
     width: 50%;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -35,4 +35,12 @@ body{
     width: 50%;
     height: 3vh;
     font-weight: 600;
+}
+#button{
+    margin-top: 10px;
+    background-color: rgb(76, 76, 175);
+    color: #fff;
+    font-size: 23px;
+    width: 50%;
+    font-family: Arial, Helvetica, sans-serif;
 }
